# contracts

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
.github/workflows/: evm_erc20_tests.yml  evm_foundry_tests.yml  evm_native_tests.yml  solana-tests.yml  solana_native_tests.yml  solana_tests.yml  solana_token_tests.yml  starknet-tests.yml  starknet_tests.yaml  starknet_tests.yml  ton_jetton_tests.yml  ton_native_tests.yml
chains/aptos/: Move.toml
chains/aptos/sources/: train.move
chains/aztec/: .gitignore  README.md
chains/aztec/scripts/: Token.js  Token.ts  Train.ts  addLock.ts  bridgeFeeJuice.ts  commit.ts  deploy.ts  deployTrain.ts  env.example  fpc.ts  getTxStatus.ts  lock.ts  lockDst.ts  lockSrc.ts  mainnetSetup.ts  mintAgain.ts  package.json  parseEvents.ts  readLocks.ts  redeem.ts  refund.ts  setup.ts  solverLock.ts  solverRedeem.ts  solverRefund.ts  tsconfig.json  userLock.ts  userRedeem.ts  userRefund.ts  userTransferPublic.ts  utils.ts  verifyTokenAztecScan.ts  verifyTrainAztecScan.ts
chains/bitcoin/: .gitignore  README.md  package.json
chains/bitcoin/src/: Bitcoin.ts  BitcoinHtlc.ts  BitcoinTrain.ts  Core.ts  events.ts  index.ts  utils.ts
chains/fuel/: Forc.toml  package.json
chains/nil/: package.json
chains/solana/: Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
chains/solana/programs/train-htlc/: Cargo.toml
chains/solana/programs/train-htlc/src/: lib.rs
chains/stacks/: Clarinet.toml
chains/starknet/: .gitignore  README.md  Scarb.toml
chains/ton/: README.md  package.json  tsconfig.json
chains/zcash/: .env.example  .gitignore  Cargo.toml  README.md
chains/zcash/zcash-core/: Cargo.toml
chains/zcash/zcash-core/src/: lib.rs  zcash.rs
chains/zcash/zcash-wasm/: Cargo.toml
chains/zcash/zcash-wasm/pkg/: package.json  zcash_wasm.d.ts  zcash_wasm.js  zcash_wasm_bg.js  zcash_wasm_bg.wasm  zcash_wasm_bg.wasm.d.ts
chains/zcash/zcash-wasm/src/: lib.rs
(+184 files in other folders)
