[package]
name = "zcash-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# librustzcash core libraries
zcash_primitives = "0.15"
zcash_client_backend = "0.12"
zcash_proofs = "0.15"
zcash_address = "0.5"

# Cryptography and key management
bip39 = "2.0"
bip32 = "0.5"
hdpath = "0.6"

# Serialization and RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Utilities
hex = "0.4"
sha2 = "0.10"
